crates/tui/src/snapshots/zerozero_tui__ui__tests__render_with_diff_view.snap
---
source: crates/tui/src/ui.rs
expression: content
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        " ZeroZero  │ xai/default  │ effort:medium  │ ask:off  │ mode:normal             ",
        "┌ Chat · 1 msgs ───────────────────────────────────────────────────────────────┐",
        "│● You                                                                         │",
        "│edit the file                                                                 │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
        "┌ Diff: src/main.rs ───────────────────────────────────────────────────────────┐",
        "│--- src/main.rs                                                               │",
        "│+++ src/main.rs                                                               │",
        "│- fn main() {}                                                                │",
        "│+ fn main() {                                                                 │",
        "│+     println!("hi");                                                         │",
        "│+ }                                                                           │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
        "┌ Composer — Enter send · Alt+Enter newline · / commands · ? help ─────────────┐",
        "│> Send a message…  ( / for commands · ? for help · ↑ for history )            │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
        " Enter to send · / for commands · ? for help · Ctrl+. shortcuts                 ",
        " session test-session · idle · ~     3 tok · diff:on · / · ? · PgUp/Dn          ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(0, 0, 0), bg: Rgb(125, 207, 255), underline: Reset, modifier: BOLD,
        x: 10, y: 0, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 0, fg: Rgb(86, 95, 137), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 0, fg: Rgb(158, 206, 106), bg: Reset, underline: Reset, modifier: BOLD,
        x: 25, y: 0, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 0, fg: Rgb(187, 154, 247), bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 0, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 0, fg: Rgb(86, 95, 137), bg: Reset, underline: Reset, modifier: NONE,
        x: 53, y: 0, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 0, fg: Rgb(86, 95, 137), bg: Reset, underline: Reset, modifier: NONE,
        x: 68, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Rgb(86, 95, 137), bg: Reset, underline: Reset, modifier: BOLD,
        x: 16, y: 1, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Rgb(125, 207, 255), bg: Reset, underline: Reset, modifier: BOLD,
        x: 6, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 2, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Rgb(192, 202, 245), bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 3, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 4, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 5, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Rgb(224, 175, 104), bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 11, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Rgb(247, 118, 142), bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 12, fg: Rgb(192, 202, 245), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 12, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Rgb(158, 206, 106), bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 13, fg: Rgb(192, 202, 245), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Rgb(247, 118, 142), bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Rgb(158, 206, 106), bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Rgb(158, 206, 106), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Rgb(158, 206, 106), bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Rgb(86, 95, 137), bg: Reset, underline: Reset, modifier: BOLD,
        x: 66, y: 19, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Rgb(125, 207, 255), bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 20, fg: Rgb(86, 95, 137), bg: Reset, underline: Reset, modifier: ITALIC,
        x: 67, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 22, fg: Rgb(86, 95, 137), bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Rgb(86, 95, 137), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 23, fg: Rgb(125, 207, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 23, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 23, fg: Rgb(86, 95, 137), bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 23, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 23, fg: Rgb(187, 154, 247), bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 23, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 23, fg: Rgb(224, 175, 104), bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 23, fg: Rgb(51, 58, 77), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 23, fg: Rgb(86, 95, 137), bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
